# QRayTracing

./: .gitignore  CMakeLists.txt  QRayTracing.pro  README.md  aboutWindow.qml  camera.cpp  camera.hpp  image_provider.cpp  image_provider.hpp  imageprovider.cpp  imageprovider.hpp  imagerenderrunnable.cpp  imagerenderrunnable.hpp  light.hpp  main.cpp  main.qml  parse.cpp  parse.hpp  plane.hpp  point3d.cpp  point3d.hpp  qml.qrc  renderedimageresponse.cpp  renderedimageresponse.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shadedObject.cpp  shadedObject.hpp  sphere.cpp  sphere.hpp
core/: CMakeLists.txt  camera.cpp  camera.hpp  color.cpp  color.hpp  light.cpp  parse.cpp  parse.hpp  plane.cpp  plane.hpp  point3d.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shadedObject.cpp  shadedObject.hpp  sphere.cpp  sphere.hpp
gui/: image_provider.cpp  image_provider.hpp  renderer.cpp  renderer.hpp
scenes/: three_spheres.json
